--- a/libs/core/tsconfig.json
+++ b/libs/core/tsconfig.json
@@ -3,11 +3,5 @@
 	"compilerOptions": {
 		"types": ["node", "jest"]
 	},
-	"include": [
-		"**/*.ts",
-		"../jwt/src/lib/token/auth-core-configuration.token.ts",
-		"../jwt/src/lib/token/index.ts",
-		"../jwt/src/lib/service/jwt-token.service.spec.ts",
-		"../jwt/src/lib/service/jwt-token.service.ts"
-	]
+	"include": ["**/*.ts"]
 }
