--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"start:ngrx": "nx serve ngrx-demo",
 		"build": "nx build",
 		"build:prod": "nx affected:build --all --prod",
+		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs",
 		"test": "nx run-many --all --target test",
 		"lint": "nx workspace-lint && ng lint",
 		"lint:ts": "tslint --project .",
@@ -126,6 +127,7 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
+		"rimraf": "^3.0.2",
 		"rollup": "^2.16.0",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
