chore: added remarkignore to ignore the CHANGELOG.md file (#67)
* feat: autorelease

* feat(jwt): removed core dependency

* chore(lint): ignore changelog linting

* chore(lint): disable prettier for the changelog

* chore(lint): added release as a commit scope

* ci(release): bump every publishable

* chore(release): 0.1.1

* chore(package): added rimraf and clean command

* chore: added remarkignore to ignore the CHANGELOG.md file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,10 +16,14 @@ jobs:
           node-version: 12
       - name: Install dependencies
         run: yarn install
+      - name: Bump versions
+        run: yarn release
       - name: Build Library
-        run: yarn build
-      - name: Release
+        run: yarn build:prod
+      - name: Release jwt
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: yarn release
+        run: |
+          npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+          npm publish ./dist/libs/jwt --access public
