--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "aegis-auth",
 	"description": "Angular authentication libaries",
-	"version": "1.0.0",
+	"version": "0.1.1",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -34,9 +34,10 @@
 		"start:core": "nx serve core-demo",
 		"start:jwt": "nx serve jwt-demo",
 		"start:ngrx": "nx serve ngrx-demo",
-		"build": "ng build",
-		"build:prod": "ng build --prod",
-		"test": "ng test",
+		"build": "nx build",
+		"build:prod": "nx affected:build --all --prod",
+		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs",
+		"test": "nx run-many --all --target test",
 		"lint": "nx workspace-lint && ng lint",
 		"lint:ts": "tslint --project .",
 		"lint:es": "eslint .",
@@ -45,7 +46,7 @@
 		"lint:md": "markdownlint --ignore 'CHANGELOG.md' --ignore-path '.gitignore' .",
 		"lint:rmd": "remark .",
 		"lint:format": "prettier --check .",
-		"e2e": "ng e2e",
+		"e2e": "nx e2e",
 		"affected:apps": "nx affected:apps",
 		"affected:libs": "nx affected:libs",
 		"affected:build": "nx affected:build",
@@ -66,7 +67,7 @@
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
 		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
-		"release": "semantic-release",
+		"release": "standard-version",
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
@@ -99,6 +100,7 @@
 		"@nrwl/node": "^9.4.0",
 		"@nrwl/web": "^9.4.0",
 		"@nrwl/workspace": "9.4.0",
+		"@semantic-release/npm": "^7.0.5",
 		"@types/jest": "26.0.0",
 		"@types/js-base64": "^2.3.1",
 		"@types/node": "~14.0.13",
@@ -109,7 +111,7 @@
 		"dotenv": "8.2.0",
 		"eslint": "7.2.0",
 		"eslint-config-prettier": "^6.11.0",
-		"eslint-plugin-prettier": "^3.1.3",
+		"eslint-plugin-prettier": "^3.1.4",
 		"husky": "^4.2.5",
 		"jest": "26.0.1",
 		"jest-preset-angular": "8.2.0",
@@ -125,10 +127,10 @@
 		"remark-lint-maximum-line-length": "^2.0.0",
 		"remark-preset-lint-consistent": "^3.0.0",
 		"remark-preset-lint-recommended": "^4.0.0",
-		"rollup": "^2.16.0",
+		"rimraf": "^3.0.2",
+		"rollup": "^2.16.1",
 		"rollup-plugin-gzip": "^2.5.0",
 		"rollup-plugin-terser": "^6.1.0",
-		"semantic-release": "^17.0.8",
 		"standard-version": "^8.0.0",
 		"stylelint": "^13.6.0",
 		"stylelint-config-prettier": "^8.0.1",
