--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,9 @@ name: CI
 
 on:
   push:
-    branches: [master, staging]
+    branches: [*]
   pull_request:
-    branches: [master, staging]
+    branches: [*]
 
 jobs:
   lint:
