chore: update to ng10

--- a/libs/jwt/package.json
+++ b/libs/jwt/package.json
@@ -10,7 +10,7 @@
 		"rxjs": "~6.5.5"
 	},
 	"dependencies": {
-		"tslib": "^1.10.0",
-		"js-base64": "^2.6.1"
+		"js-base64": "^2.6.1",
+		"tslib": "^2.0.1"
 	}
 }
