--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs",
 		"test": "nx run-many --all --target test",
 		"lint": "nx workspace-lint && ng lint",
-		"lint:ts": "tslint --project .",
+		"lint:ts": "tslint --project tsconfig.base.json",
 		"lint:es": "eslint .",
 		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
 		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
@@ -59,91 +59,90 @@
 		"format": "nx format:write",
 		"format:write": "nx format:write",
 		"format:check": "nx format:check",
-		"ncu": "ncu",
-		"ncu:u": "ncu -u",
+		"ncu": "ncu -u",
 		"docs": "typedoc libs",
 		"update": "ng update @nrwl/workspace",
 		"update:all": "nx update --all --force",
 		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
+		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
 		"release": "standard-version",
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
-		"@angular/animations": "~9.1.11",
-		"@angular/common": "~9.1.11",
-		"@angular/compiler": "~9.1.11",
-		"@angular/core": "~9.1.11",
-		"@angular/forms": "~9.1.11",
-		"@angular/platform-browser": "~9.1.11",
-		"@angular/platform-browser-dynamic": "~9.1.11",
-		"@angular/router": "~9.1.11",
-		"@nrwl/angular": "9.5.0",
+		"@angular/animations": "~10.0.11",
+		"@angular/common": "~10.0.11",
+		"@angular/compiler": "~10.0.11",
+		"@angular/core": "~10.0.11",
+		"@angular/forms": "~10.0.11",
+		"@angular/platform-browser": "~10.0.11",
+		"@angular/platform-browser-dynamic": "~10.0.11",
+		"@angular/router": "~10.0.11",
+		"@nrwl/angular": "10.0.13",
 		"core-js": "~3.6.5",
-		"rxjs": "~6.5.5",
-		"tslib": "~2.0.0",
+		"rxjs": "~6.6.2",
+		"tslib": "^2.0.1",
 		"zone.js": "~0.10.3"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.901.9",
-		"@angular-devkit/build-ng-packagr": "~0.901.9",
-		"@angular/cli": "~9.1.9",
-		"@angular/compiler-cli": "~9.1.11",
-		"@angular/language-service": "~9.1.11",
-		"@commitlint/cli": "~9.0.1",
-		"@commitlint/config-conventional": "~9.0.1",
-		"@nrwl/cypress": "~9.5.0",
-		"@nrwl/eslint-plugin-nx": "~9.5.0",
-		"@nrwl/jest": "~9.5.0",
-		"@nrwl/linter": "~9.5.0",
-		"@nrwl/node": "~9.5.0",
-		"@nrwl/web": "~9.5.0",
-		"@nrwl/workspace": "~9.5.0",
+		"@angular-devkit/build-angular": "~0.1000.6",
+		"@angular-devkit/build-ng-packagr": "~0.1000.6",
+		"@angular/cli": "~10.0.6",
+		"@angular/compiler-cli": "~10.0.11",
+		"@angular/language-service": "~10.0.11",
+		"@commitlint/cli": "~9.1.2",
+		"@commitlint/config-conventional": "~9.1.2",
+		"@nrwl/cypress": "~10.0.13",
+		"@nrwl/eslint-plugin-nx": "~10.0.13",
+		"@nrwl/jest": "~10.0.13",
+		"@nrwl/linter": "~10.0.13",
+		"@nrwl/node": "~10.0.13",
+		"@nrwl/web": "~10.0.13",
+		"@nrwl/workspace": "~10.0.13",
 		"@semantic-release/npm": "~7.0.5",
-		"@types/jest": "~26.0.3",
-		"@types/js-base64": "~2.3.2",
-		"@types/node": "~14.0.14",
-		"@typescript-eslint/eslint-plugin": "~3.5.0",
-		"@typescript-eslint/parser": "~3.5.0",
-		"codelyzer": "~5.2.2",
-		"cypress": "~4.9.0",
+		"@types/jest": "~26.0.10",
+		"@types/js-base64": "~3.0.0",
+		"@types/node": "~14.6.0",
+		"@typescript-eslint/eslint-plugin": "~3.9.1",
+		"@typescript-eslint/parser": "~3.9.1",
+		"codelyzer": "^6.0.0",
+		"cypress": "~5.0.0",
 		"dotenv": "~8.2.0",
-		"eslint": "~7.3.1",
+		"eslint": "~7.7.0",
 		"eslint-config-prettier": "~6.11.0",
 		"eslint-plugin-prettier": "~3.1.4",
 		"husky": "~4.2.5",
-		"jest": "~26.1.0",
+		"jest": "~26.4.1",
 		"jest-preset-angular": "8.2.1",
 		"lint-staged": "~10.2.11",
 		"markdownlint": "~0.20.4",
 		"markdownlint-cli": "~0.23.2",
-		"ng-packagr": "~9.1.5",
-		"npm-check-updates": "~7.0.1",
+		"ng-packagr": "^10.0.4",
+		"npm-check-updates": "~7.1.1",
 		"prettier": "~2.0.5",
-		"remark": "~12.0.0",
-		"remark-cli": "~8.0.0",
-		"remark-lint": "~7.0.0",
-		"remark-lint-maximum-line-length": "~2.0.1",
-		"remark-preset-lint-consistent": "~3.0.0",
-		"remark-preset-lint-recommended": "~4.0.0",
+		"remark": "~12.0.1",
+		"remark-cli": "~8.0.1",
+		"remark-lint": "~7.0.1",
+		"remark-lint-maximum-line-length": "~2.0.3",
+		"remark-preset-lint-consistent": "~3.0.1",
+		"remark-preset-lint-recommended": "~4.0.1",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.18.1",
+		"rollup": "~2.26.4",
 		"rollup-plugin-gzip": "~2.5.0",
-		"rollup-plugin-terser": "~6.1.0",
-		"standard-version": "~8.0.0",
+		"rollup-plugin-terser": "~7.0.0",
+		"standard-version": "~9.0.0",
 		"stylelint": "~13.6.1",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.1.2",
-		"ts-jest": "~26.1.1",
+		"ts-jest": "~26.2.0",
 		"ts-node": "~8.10.2",
-		"tslint": "~6.1.2",
+		"tslint": "~6.1.3",
 		"tslint-config-prettier": "~1.18.0",
 		"tslint-plugin-prettier": "~2.3.0",
-		"typedoc": "~0.17.8",
+		"typedoc": "~0.18.0",
 		"typedoc-plugin-external-module-name": "~4.0.3",
-		"typescript": "~3.8.3",
+		"typescript": "~3.9.7",
 		"yaml-lint": "~1.2.4"
 	}
 }
