--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,7 @@ jobs:
   release:
     name: Release
     runs-on: ubuntu-18.04
+    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v1
