--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
 		"start:ngrx": "nx serve ngrx-demo",
 		"build": "nx build",
 		"build:prod": "nx affected:build --all --prod",
-		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs",
+		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache",
+		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
+		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && ng lint",
 		"lint:ts": "tslint --project tsconfig.base.json",
 		"lint:es": "eslint .",
