--- a/nx.json
+++ b/nx.json
@@ -14,7 +14,9 @@
 		"default": {
 			"runner": "@nrwl/workspace/tasks-runners/default",
 			"options": {
-				"cacheableOperations": ["build", "lint", "test", "e2e"]
+				"cacheableOperations": ["build", "lint", "test", "e2e"],
+				"runtimeCacheInputs": ["node -v"],
+				"cacheDirectory": ".cache/nx"
 			}
 		}
 	},
