--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,23 +6,38 @@ on:
 jobs:
   release:
     name: Release
-    runs-on: ubuntu-18.04
-    continue-on-error: true
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v1
+      - name: Cache Packages
+        id: cache-packages
+        uses: actions/cache@v2
+        with:
+          path: node_modules
+          key: ${{ runner.os }}-${{ hashFiles('**/yarn.lock') }}
+      - name: Cache Version
+        id: cache-version
+        uses: actions/cache@v2
+        with:
+          path: .github/version.txt
+          key: ${{ runner.os }}-${{ hashFiles('.github/version.txt') }}
       - name: Setup Node.js
+        if: steps.cache-version.outputs.cache-hit != 'true'
         uses: actions/setup-node@v1
         with:
-          node-version: 12
+          node-version: 14
       - name: Install dependencies
-        run: yarn install
+        if: steps.cache-version.outputs.cache-hit != 'true' && steps.cache-packages.outputs.cache-hit != 'true'
+        run: yarn install --frozen-lockfile
       - name: Build Library
+        if: steps.cache-version.outputs.cache-hit != 'true'
         run: yarn build:prod
       - name: Release jwt
+        if: steps.cache-version.outputs.cache-hit != 'true'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
-          npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
-          npm publish ./dist/libs/jwt --access public
+          yarn config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
+          yarn publish ./dist/libs/jwt --access public
