chore: added bundle analyzer

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,4 +102,4 @@ jobs:
         if: steps.cache-packages.outputs.cache-hit != 'true'
         run: yarn install
       - name: Build production
-        run: yarn build:prod
+        run: yarn build
