--- a/libs/ngrx/package.json
+++ b/libs/ngrx/package.json
@@ -1,12 +1,12 @@
 {
 	"name": "@aegis-auth/ngrx",
-	"version": "1.0.1",
+	"version": "8.0.0",
 	"peerDependencies": {
-		"@angular/common": "^9.1.9",
-		"@angular/core": "^9.1.9",
-		"@ngrx/store": "^9.2.0"
+		"@angular/common": "8.*.*",
+		"@angular/core": "8.*.*",
+		"@ngrx/store": "8.*.*"
 	},
 	"dependencies": {
-		"tslib": "^2.0.1"
+		"tslib": "1.9.*"
 	}
 }
