--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "aegis-auth",
 	"description": "Angular authentication libaries",
-	"version": "1.0.1",
+	"version": "8.0.0",
 	"license": "MIT",
 	"author": {
 		"email": "alexaegis@gmail.com",
@@ -69,30 +69,29 @@
 		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
 		"release": "standard-version",
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
-		"@angular/common": "~10.1.0",
-		"@angular/compiler": "~10.1.0",
-		"@angular/core": "~10.1.0",
-		"@angular/forms": "~10.1.0",
-		"@angular/platform-browser": "~10.1.0",
-		"@angular/platform-browser-dynamic": "~10.1.0",
-		"@angular/router": "~10.1.0",
+		"@angular/common": "8.*.*",
+		"@angular/compiler": "8.*.*",
+		"@angular/core": "8.*.*",
+		"@angular/forms": "8.*.*",
+		"@angular/platform-browser": "8.*.*",
+		"@angular/platform-browser-dynamic": "8.*.*",
+		"@angular/router": "8.*.*",
 		"@nrwl/angular": "10.1.0",
 		"core-js": "~3.6.5",
-		"rxjs": "~6.6.2",
-		"tslib": "^2.0.1",
-		"zone.js": "~0.11.1"
+		"rxjs": "6.4.*",
+		"tslib": "1.9.*",
+		"zone.js": "0.9.*"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1001.0",
-		"@angular-devkit/build-ng-packagr": "~0.1001.0",
-		"@angular/cli": "~10.1.0",
-		"@angular/compiler-cli": "~10.1.0",
-		"@angular/language-service": "~10.1.0",
+		"@angular-devkit/build-angular": "0.803.*",
+		"@angular-devkit/build-ng-packagr": "0.803.*",
+		"@angular/cli": "8.*.*",
+		"@angular/compiler-cli": "8.*.*",
+		"@angular/language-service": "8.*.*",
 		"@commitlint/cli": "~9.1.2",
 		"@commitlint/config-conventional": "~9.1.2",
 		"@nrwl/cypress": "~10.1.0",
@@ -144,7 +143,7 @@
 		"tslint-plugin-prettier": "~2.3.0",
 		"typedoc": "~0.19.0",
 		"typedoc-plugin-external-module-name": "~4.0.3",
-		"typescript": "~4.0.2",
+		"typescript": "3.5.*",
 		"webpack-bundle-analyzer": "~3.8.0",
 		"yaml-lint": "~1.2.4"
 	}
