--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,7 @@
 		"experimentalDecorators": true,
 		"importHelpers": true,
 		"target": "es2015",
-		"module": "es2020",
+		"module": "es2015",
 		"strict": true,
 		"typeRoots": ["node_modules/@types"],
 		"lib": ["es2017", "dom"],
@@ -24,7 +24,7 @@
 		}
 	},
 	"angularCompilerOptions": {
-		"enableIvy": true,
+		"enableIvy": false,
 		"fullTemplateTypeCheck": true
 	},
 	"exclude": ["node_modules", "tmp"]
