--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"bugs": {
 		"url": "https://www.github.com/AlexAegis/auth/issues"
 	},
+	"sideEffects": false,
 	"private": true,
 	"config": {
 		"engine-strict": true
