chore: added package.json details to sub packages

--- a/libs/core/package.json
+++ b/libs/core/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@aegis-auth/core",
-	"description": "Angular authentication libary core module",
+	"description": "Angular authentication libraries",
 	"version": "10.1.0",
 	"license": "MIT",
 	"author": {
@@ -8,22 +8,10 @@
 		"name": "AlexAegis",
 		"url": "https://www.github.com/AlexAegis"
 	},
-	"homepage": "https://www.github.com/AlexAegis/auth#readme",
-	"repository": {
-		"type": "git",
-		"url": "https://www.github.com/AlexAegis/auth",
-		"directory": "libs/core"
-	},
+	"homepage": "https://github.com/AlexAegis/auth/tree/master/libs/core#readme",
+	"repository": "github:AlexAegis/auth",
 	"bugs": {
 		"url": "https://www.github.com/AlexAegis/auth/issues"
-	},
-	"private": false,
-	"config": {
-		"engine-strict": true
-	},
-	"engines": {
-		"node": ">=10.13.0",
-		"yarn": ">=1.0.0"
 	},
 	"dependencies": {
 		"tslib": "2.*.*"
