--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "aegis-auth",
-	"description": "Angular authentication libaries",
+	"description": "Angular authentication libraries",
 	"version": "10.1.0",
 	"license": "MIT",
 	"author": {
