--- a/libs/jwt/package.json
+++ b/libs/jwt/package.json
@@ -1,6 +1,18 @@
 {
 	"name": "@aegis-auth/jwt",
+	"description": "Angular JWT authentication library",
 	"version": "10.1.0",
+	"license": "MIT",
+	"author": {
+		"email": "alexaegis@gmail.com",
+		"name": "AlexAegis",
+		"url": "https://www.github.com/AlexAegis"
+	},
+	"homepage": "https://github.com/AlexAegis/auth/tree/master/libs/jwt#readme",
+	"repository": "github:AlexAegis/auth",
+	"bugs": {
+		"url": "https://www.github.com/AlexAegis/auth/issues"
+	},
 	"scripts": {
 		"release": "semantic-release"
 	},
