--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
 		"js",
 		"javascript"
 	],
-	"sideEffects": false,
+	"sideEffects": [
+		"./apps/*/src/main.ts"
+	],
 	"private": true,
 	"config": {
 		"engine-strict": true
@@ -89,13 +91,13 @@
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
-		"@angular/common": "~10.1.2",
-		"@angular/compiler": "~10.1.2",
-		"@angular/core": "~10.1.2",
-		"@angular/forms": "~10.1.2",
-		"@angular/platform-browser": "~10.1.2",
-		"@angular/platform-browser-dynamic": "~10.1.2",
-		"@angular/router": "~10.1.2",
+		"@angular/common": "~10.1.3",
+		"@angular/compiler": "~10.1.3",
+		"@angular/core": "~10.1.3",
+		"@angular/forms": "~10.1.3",
+		"@angular/platform-browser": "~10.1.3",
+		"@angular/platform-browser-dynamic": "~10.1.3",
+		"@angular/router": "~10.1.3",
 		"@nrwl/angular": "10.2.1",
 		"core-js": "~3.6.5",
 		"rxjs": "~6.6.3",
@@ -103,11 +105,11 @@
 		"zone.js": "~0.11.1"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1001.2",
-		"@angular-devkit/build-ng-packagr": "~0.1001.2",
-		"@angular/cli": "~10.1.2",
-		"@angular/compiler-cli": "~10.1.2",
-		"@angular/language-service": "~10.1.2",
+		"@angular-devkit/build-angular": "~0.1001.3",
+		"@angular-devkit/build-ng-packagr": "~0.1001.3",
+		"@angular/cli": "~10.1.3",
+		"@angular/compiler-cli": "~10.1.3",
+		"@angular/language-service": "~10.1.3",
 		"@commitlint/cli": "~11.0.0",
 		"@commitlint/config-conventional": "~11.0.0",
 		"@nrwl/cypress": "~10.2.1",
@@ -119,23 +121,23 @@
 		"@nrwl/workspace": "~10.2.1",
 		"@types/jest": "~26.0.14",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "~14.11.1",
-		"@typescript-eslint/eslint-plugin": "~4.1.1",
-		"@typescript-eslint/parser": "~4.1.1",
+		"@types/node": "~14.11.2",
+		"@typescript-eslint/eslint-plugin": "~4.2.0",
+		"@typescript-eslint/parser": "~4.2.0",
 		"codelyzer": "^6.0.0",
 		"cypress": "~5.2.0",
 		"dotenv": "~8.2.0",
-		"eslint": "~7.9.0",
-		"eslint-config-prettier": "~6.11.0",
+		"eslint": "~7.10.0",
+		"eslint-config-prettier": "~6.12.0",
 		"eslint-plugin-prettier": "~3.1.4",
 		"husky": "~4.3.0",
 		"jest": "~26.4.2",
 		"jest-preset-angular": "8.3.1",
 		"lint-staged": "~10.4.0",
-		"markdownlint": "~0.20.4",
+		"markdownlint": "~0.21.0",
 		"markdownlint-cli": "~0.23.2",
-		"ng-packagr": "^10.1.0",
-		"npm-check-updates": "~9.0.1",
+		"ng-packagr": "^10.1.2",
+		"npm-check-updates": "~9.0.2",
 		"prettier": "~2.1.2",
 		"remark": "~12.0.1",
 		"remark-cli": "~8.0.1",
@@ -144,21 +146,21 @@
 		"remark-preset-lint-consistent": "~3.0.1",
 		"remark-preset-lint-recommended": "~4.0.1",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.27.1",
+		"rollup": "~2.28.2",
 		"rollup-plugin-gzip": "~2.5.0",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.0.0",
-		"stylelint": "~13.7.1",
+		"stylelint": "~13.7.2",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.1.2",
-		"ts-jest": "~26.3.0",
+		"ts-jest": "~26.4.0",
 		"ts-node": "~9.0.0",
 		"tslint": "~6.1.3",
 		"tslint-config-prettier": "~1.18.0",
 		"tslint-plugin-prettier": "~2.3.0",
-		"typedoc": "~0.19.1",
+		"typedoc": "~0.19.2",
 		"typedoc-plugin-external-module-name": "~4.0.3",
-		"typescript": "~4.0.2",
+		"typescript": "~4.0.3",
 		"webpack-bundle-analyzer": "~3.9.0",
 		"yaml-lint": "~1.2.4"
 	}
