--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
 		"start:jwt": "nx serve jwt-demo",
 		"start:ngrx": "nx serve ngrx-demo",
 		"build": "nx affected:build --all --prod",
+		"build:core": "nx build core-demo --prod --stats-json",
 		"build:jwt": "nx build jwt-demo --prod --stats-json",
+		"build:ngrx": "nx build ngrx-demo --prod --stats-json",
+		"hoist:core": "cpy ./dist/apps/core-demo/* ./dist",
 		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache",
 		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
@@ -80,7 +83,7 @@
 		"format:write": "nx format:write",
 		"format:check": "nx format:check",
 		"ncu": "ncu -u",
-		"typedoc": "typedoc libs",
+		"typedoc": "typedoc libs --tsconfig ./tsconfig.base.json --out ./dist/typedoc",
 		"update": "ng update @nrwl/workspace",
 		"update:all": "nx update --all --force",
 		"workspace-schematic": "nx workspace-schematic",
@@ -91,13 +94,20 @@
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
+		"@angular/animations": "^10.1.3",
+		"@angular/cdk": "^10.2.2",
 		"@angular/common": "~10.1.3",
 		"@angular/compiler": "~10.1.3",
 		"@angular/core": "~10.1.3",
 		"@angular/forms": "~10.1.3",
+		"@angular/material": "^10.2.2",
 		"@angular/platform-browser": "~10.1.3",
 		"@angular/platform-browser-dynamic": "~10.1.3",
 		"@angular/router": "~10.1.3",
+		"@fortawesome/angular-fontawesome": "^0.7.0",
+		"@fortawesome/fontawesome-svg-core": "^1.2.30",
+		"@fortawesome/free-brands-svg-icons": "^5.14.0",
+		"@fortawesome/free-solid-svg-icons": "^5.14.0",
 		"@nrwl/angular": "10.2.1",
 		"core-js": "~3.6.5",
 		"rxjs": "~6.6.3",
@@ -125,6 +135,7 @@
 		"@typescript-eslint/eslint-plugin": "~4.2.0",
 		"@typescript-eslint/parser": "~4.2.0",
 		"codelyzer": "^6.0.0",
+		"cpy-cli": "^3.1.1",
 		"cypress": "~5.2.0",
 		"dotenv": "~8.2.0",
 		"eslint": "~7.10.0",
