--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -11,6 +11,7 @@
 		"importHelpers": true,
 		"target": "es2015",
 		"module": "es2020",
+		"resolveJsonModule": true,
 		"strict": true,
 		"typeRoots": ["node_modules/@types"],
 		"lib": ["es2017", "dom"],
