--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
  */
 {
 	"files": [],
+	"compilerOptions": { "resolveJsonModule": true },
 	"references": [
 		{
 			"path": "./libs/core/tsconfig.lib.json"
