--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Lint packages
         run: yarn lint
       - name: Lint using eslint
@@ -73,7 +73,7 @@ jobs:
         run: |
           export CODACY_PROJECT_TOKEN=${{ secrets.CODACY_PROJECT_TOKEN }}
           bash <(curl -Ls https://coverage.codacy.com/get.sh) \
-          -- -r cove/**/*coverage.xml
+          -- -r coverage/**/*coverage.xml
       - name: Upload coverage result to codecov
         run: |
           bash <(curl -s https://codecov.io/bash) \
@@ -100,6 +100,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install packages
         if: steps.cache-packages.outputs.cache-hit != 'true'
-        run: yarn install
+        run: yarn install --frozen-lockfile
       - name: Build production
         run: yarn build
