--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	"keywords": [
 		"ng",
 		"angular",
+		"nx",
 		"jwt",
 		"token",
 		"auth",
@@ -57,8 +58,8 @@
 		"build:jwt": "nx build jwt-demo --prod --stats-json",
 		"build:ngrx": "nx build ngrx-demo --prod --stats-json",
 		"hoist:core": "cpy ./dist/apps/core-demo/* ./dist",
-		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache",
-		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./typedocs ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
+		"clean": "rimraf ./dist ./coverage ./.codacy-coverage ./cache",
+		"self-destruct": "rimraf ./dist ./coverage ./.codacy-coverage ./cache ./node-modules ./package-lock.json ./yarn.lock ./pnpm-lock.yaml",
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && ng lint",
@@ -94,77 +95,77 @@
 		"prepublishOnly": "yarn build"
 	},
 	"dependencies": {
-		"@angular/animations": "^10.1.4",
-		"@angular/cdk": "^10.2.3",
-		"@angular/common": "~10.1.4",
-		"@angular/compiler": "~10.1.4",
-		"@angular/core": "~10.1.4",
-		"@angular/forms": "~10.1.4",
-		"@angular/material": "^10.2.3",
-		"@angular/platform-browser": "~10.1.4",
-		"@angular/platform-browser-dynamic": "~10.1.4",
-		"@angular/router": "~10.1.4",
+		"@angular/animations": "^10.2.0",
+		"@angular/cdk": "^10.2.6",
+		"@angular/common": "~10.2.0",
+		"@angular/compiler": "~10.2.0",
+		"@angular/core": "~10.2.0",
+		"@angular/forms": "~10.2.0",
+		"@angular/material": "^10.2.6",
+		"@angular/platform-browser": "~10.2.0",
+		"@angular/platform-browser-dynamic": "~10.2.0",
+		"@angular/router": "~10.2.0",
 		"@fortawesome/angular-fontawesome": "^0.7.0",
-		"@fortawesome/fontawesome-svg-core": "^1.2.31",
-		"@fortawesome/free-brands-svg-icons": "^5.15.0",
-		"@fortawesome/free-solid-svg-icons": "^5.15.0",
-		"@nrwl/angular": "10.2.1",
+		"@fortawesome/fontawesome-svg-core": "^1.2.32",
+		"@fortawesome/free-brands-svg-icons": "^5.15.1",
+		"@fortawesome/free-solid-svg-icons": "^5.15.1",
+		"@nrwl/angular": "10.3.1",
 		"core-js": "~3.6.5",
 		"rxjs": "~6.6.3",
-		"tslib": "^2.0.1",
-		"zone.js": "~0.11.1"
+		"tslib": "^2.0.3",
+		"zone.js": "~0.11.2"
 	},
 	"devDependencies": {
-		"@angular-devkit/build-angular": "~0.1001.4",
-		"@angular-devkit/build-ng-packagr": "~0.1001.4",
-		"@angular/cli": "~10.1.4",
-		"@angular/compiler-cli": "~10.1.4",
-		"@angular/language-service": "~10.1.4",
+		"@angular-devkit/build-angular": "~0.1002.0",
+		"@angular-devkit/build-ng-packagr": "~0.1002.0",
+		"@angular/cli": "~10.2.0",
+		"@angular/compiler-cli": "~10.2.0",
+		"@angular/language-service": "~10.2.0",
 		"@commitlint/cli": "~11.0.0",
 		"@commitlint/config-conventional": "~11.0.0",
-		"@nrwl/cypress": "~10.2.1",
-		"@nrwl/eslint-plugin-nx": "~10.2.1",
-		"@nrwl/jest": "~10.2.1",
-		"@nrwl/linter": "~10.2.1",
-		"@nrwl/node": "~10.2.1",
-		"@nrwl/web": "~10.2.1",
-		"@nrwl/workspace": "~10.2.1",
-		"@types/jest": "~26.0.14",
+		"@nrwl/cypress": "~10.3.1",
+		"@nrwl/eslint-plugin-nx": "~10.3.1",
+		"@nrwl/jest": "~10.3.1",
+		"@nrwl/linter": "~10.3.1",
+		"@nrwl/node": "~10.3.1",
+		"@nrwl/web": "~10.3.1",
+		"@nrwl/workspace": "~10.3.1",
+		"@types/jest": "~26.0.15",
 		"@types/js-base64": "~3.0.0",
-		"@types/node": "~14.11.2",
-		"@typescript-eslint/eslint-plugin": "~4.3.0",
-		"@typescript-eslint/parser": "~4.3.0",
+		"@types/node": "~14.14.5",
+		"@typescript-eslint/eslint-plugin": "~4.6.0",
+		"@typescript-eslint/parser": "~4.6.0",
 		"codelyzer": "^6.0.1",
 		"cpy-cli": "^3.1.1",
-		"cypress": "~5.3.0",
+		"cypress": "~5.5.0",
 		"dotenv": "~8.2.0",
-		"eslint": "~7.10.0",
-		"eslint-config-prettier": "~6.12.0",
+		"eslint": "~7.12.1",
+		"eslint-config-prettier": "~6.15.0",
 		"eslint-plugin-prettier": "~3.1.4",
 		"husky": "~4.3.0",
-		"jest": "~26.4.2",
-		"jest-preset-angular": "8.3.1",
-		"lint-staged": "~10.4.0",
-		"markdownlint": "~0.21.0",
+		"jest": "~26.6.1",
+		"jest-preset-angular": "8.3.2",
+		"lint-staged": "~10.5.0",
+		"markdownlint": "~0.21.1",
 		"markdownlint-cli": "~0.24.0",
 		"ng-packagr": "^10.1.2",
-		"npm-check-updates": "~9.0.3",
+		"npm-check-updates": "~9.2.3",
 		"prettier": "~2.1.2",
-		"remark": "~12.0.1",
-		"remark-cli": "~8.0.1",
-		"remark-lint": "~7.0.1",
+		"remark": "~13.0.0",
+		"remark-cli": "~9.0.0",
+		"remark-lint": "~8.0.0",
 		"remark-lint-maximum-line-length": "~2.0.3",
-		"remark-preset-lint-consistent": "~3.0.1",
-		"remark-preset-lint-recommended": "~4.0.1",
+		"remark-preset-lint-consistent": "~4.0.0",
+		"remark-preset-lint-recommended": "~5.0.0",
 		"rimraf": "~3.0.2",
-		"rollup": "~2.28.2",
+		"rollup": "~2.32.1",
 		"rollup-plugin-gzip": "~2.5.0",
 		"rollup-plugin-terser": "~7.0.2",
 		"standard-version": "~9.0.0",
 		"stylelint": "~13.7.2",
 		"stylelint-config-prettier": "~8.0.2",
 		"stylelint-prettier": "~1.1.2",
-		"ts-jest": "~26.4.1",
+		"ts-jest": "~26.4.3",
 		"ts-node": "~9.0.0",
 		"tslint": "~6.1.3",
 		"tslint-config-prettier": "~1.18.0",
