--- a/package.json
+++ b/package.json
@@ -90,9 +90,11 @@
 		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"postinstall": "ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
+		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
 		"release": "standard-version",
-		"prepublishOnly": "yarn build"
+		"prepublishOnly": "yarn build",
+		"prepublish": "pinst --disable",
+		"postpublish": "pinst --enable"
 	},
 	"dependencies": {
 		"@angular/animations": "^10.2.0",
@@ -142,7 +144,7 @@
 		"eslint": "~7.13.0",
 		"eslint-config-prettier": "~6.15.0",
 		"eslint-plugin-prettier": "~3.1.4",
-		"husky": "~4.3.0",
+		"husky": "^5.0.1",
 		"jest": "~26.6.3",
 		"jest-preset-angular": "8.3.2",
 		"lint-staged": "~10.5.1",
@@ -150,6 +152,7 @@
 		"markdownlint-cli": "~0.25.0",
 		"ng-packagr": "^10.1.2",
 		"npm-check-updates": "~10.2.1",
+		"pinst": "^2.1.1",
 		"prettier": "~2.2.0",
 		"remark": "~13.0.0",
 		"remark-cli": "~9.0.0",
