feat: eslint migration

--- a/angular.json
+++ b/angular.json
@@ -20,10 +20,9 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": ["libs/core/tsconfig.lib.json", "libs/core/tsconfig.spec.json"],
-						"exclude": ["**/node_modules/**", "!libs/core/**"]
+						"lintFilePatterns": ["libs/core/**/*.ts", "libs/core/**/*.html"]
 					}
 				},
 				"test": {
@@ -114,13 +113,9 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": [
-							"apps/core-demo/tsconfig.app.json",
-							"apps/core-demo/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**", "!apps/core-demo/**"]
+						"lintFilePatterns": ["apps/core-demo/**/*.ts", "apps/core-demo/**/*.html"]
 					}
 				},
 				"test": {
@@ -152,10 +147,12 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": ["apps/core-demo-e2e/tsconfig.e2e.json"],
-						"exclude": ["**/node_modules/**", "!apps/core-demo-e2e/**"]
+						"lintFilePatterns": [
+							"apps/core-demo-e2e/**/*.ts",
+							"apps/core-demo-e2e/**/*.html"
+						]
 					}
 				}
 			}
@@ -179,10 +176,9 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": ["libs/ngrx/tsconfig.lib.json", "libs/ngrx/tsconfig.spec.json"],
-						"exclude": ["**/node_modules/**", "!libs/ngrx/**"]
+						"lintFilePatterns": ["libs/ngrx/**/*.ts", "libs/ngrx/**/*.html"]
 					}
 				},
 				"test": {
@@ -215,10 +211,9 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": ["libs/jwt/tsconfig.lib.json", "libs/jwt/tsconfig.spec.json"],
-						"exclude": ["**/node_modules/**", "!libs/jwt/**"]
+						"lintFilePatterns": ["libs/jwt/**/*.ts", "libs/jwt/**/*.html"]
 					}
 				},
 				"test": {
@@ -305,13 +300,9 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": [
-							"apps/jwt-demo/tsconfig.app.json",
-							"apps/jwt-demo/tsconfig.spec.json"
-						],
-						"exclude": ["**/node_modules/**", "!apps/jwt-demo/**"]
+						"lintFilePatterns": ["apps/jwt-demo/**/*.ts", "apps/jwt-demo/**/*.html"]
 					}
 				},
 				"test": {
@@ -343,10 +334,12 @@
 					}
 				},
 				"lint": {
-					"builder": "@angular-devkit/build-angular:tslint",
+					"builder": "@angular-eslint/builder:lint",
 					"options": {
-						"tsConfig": ["apps/jwt-demo-e2e/tsconfig.e2e.json"],
-						"exclude": ["**/node_modules/**", "!apps/jwt-demo-e2e/**"]
+						"lintFilePatterns": [
+							"apps/jwt-demo-e2e/**/*.ts",
+							"apps/jwt-demo-e2e/**/*.html"
+						]
 					}
 				}
 			}
