--- a/package.json
+++ b/package.json
@@ -63,7 +63,6 @@
 		"test": "nx run-many --all --target test",
 		"test:skip-cache": "nx run-many --all --target test --skip-nx-cache",
 		"lint": "nx workspace-lint && ng lint",
-		"lint:ts": "tslint --project tsconfig.base.json",
 		"lint:es": "eslint --max-warnings=0 .",
 		"lint:css": "stylelint --allow-empty-input --syntax=css ./**/*.css",
 		"lint:scss": "stylelint --allow-empty-input --syntax=scss ./**/*.scss",
@@ -84,13 +83,13 @@
 		"format:write": "nx format:write",
 		"format:check": "nx format:check",
 		"ncu": "ncu -u",
-		"typedoc": "typedoc libs --tsconfig ./tsconfig.base.json --out ./dist/typedoc",
+		"typedoc": "typedoc libs --tsconfig ./tsconfig.json --out ./dist/typedoc",
 		"update": "ng update @nrwl/workspace",
 		"update:all": "nx update --all --force",
 		"workspace-schematic": "nx workspace-schematic",
 		"dep-graph": "nx dep-graph",
 		"help": "nx help",
-		"_postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.base.json",
+		"postinstall": "husky install && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points --tsconfig tsconfig.json",
 		"release": "standard-version",
 		"release:minor": "standard-version --release-as minor",
 		"release:major": "standard-version --release-as major",
@@ -121,6 +120,11 @@
 	},
 	"devDependencies": {
 		"@angular-devkit/build-angular": "~0.1100.2",
+		"@angular-eslint/builder": "^0.8.0-beta.1",
+		"@angular-eslint/eslint-plugin": "^0.8.0-beta.1",
+		"@angular-eslint/eslint-plugin-template": "^0.8.0-beta.1",
+		"@angular-eslint/schematics": "^0.8.0-beta.1",
+		"@angular-eslint/template-parser": "^0.8.0-beta.1",
 		"@angular/cli": "~11.0.2",
 		"@angular/compiler-cli": "~11.0.2",
 		"@angular/language-service": "~11.0.2",
@@ -144,7 +148,11 @@
 		"dotenv": "~8.2.0",
 		"eslint": "~7.14.0",
 		"eslint-config-prettier": "~6.15.0",
+		"eslint-plugin-import": "^2.22.1",
+		"eslint-plugin-jsdoc": "^30.7.8",
+		"eslint-plugin-prefer-arrow": "^1.2.2",
 		"eslint-plugin-prettier": "~3.1.4",
+		"eslint-plugin-react": "latest",
 		"husky": "^5.0.1",
 		"jest": "~26.6.3",
 		"jest-preset-angular": "8.3.2",
@@ -171,9 +179,6 @@
 		"stylelint-prettier": "~1.1.2",
 		"ts-jest": "~26.4.4",
 		"ts-node": "~9.0.0",
-		"tslint": "~6.1.3",
-		"tslint-config-prettier": "~1.18.0",
-		"tslint-plugin-prettier": "~2.3.0",
 		"typedoc": "~0.19.2",
 		"typedoc-plugin-external-module-name": "~4.0.3",
 		"typescript": "~4.0.3",
