chore: remove gh page publish from backport branch
added ng10 tag

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,7 @@ name: Release
 on:
   push:
     branches:
-      - master
+      - ng10
 jobs:
   release:
     name: Release
@@ -46,10 +46,4 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           npm config set '//registry.npmjs.org/:_authToken' "${NPM_TOKEN}"
-          npm publish ./dist/libs/jwt --access public
-      - name: Deploy Github Pages
-        if: env.JWT_IS_ON_NPM != 'true'
-        uses: peaceiris/actions-gh-pages@v3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist
+          npm publish ./dist/libs/jwt --access public --tag ng10
